Se agrega la linea de upgrade-grub porque vamos a usar password de GRUB.

--- a/16-archivos-preseed/hardening-VM.cfg
+++ b/16-archivos-preseed/hardening-VM.cfg
@@ -23,12 +23,14 @@ in-target /bin/bash /eliminar-paquetes.sh; \
 in-target chmod +x /nftables-AMI.sh; \
 in-target /bin/bash /nftables-AMI.sh; \
 
-in-target chmod +x /hardening-final-AMI.sh; \
-in-target /bin/bash /hardening-final-AMI.sh; \
+in-target chmod +x /hardening-final-VM.sh; \
+in-target /bin/bash /hardening-final-VM.sh; \
 
-in-target /usr/bin/rm /hardening-final-AMI.sh; \
+in-target /usr/bin/rm /hardening-final-VM.sh; \
 
 in-target /usr/bin/rm /script-descargas.sh; \
+
+in-target /usr/sbin/update-grub; \
 
 in-target /usr/bin/aide --init --config /etc/aide/aide.conf; \
 in-target /usr/bin/cp -p /var/lib/aide/aide.db.new /var/lib/aide/aide.db;
